digito-api/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digito-api
  labels:
    app: digito
    type: api
spec:
  selector:
    matchLabels:
      app: digito
      type: api
  replicas: 2
  progressDeadlineSeconds: 120
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: digito
        type: api
    spec:
      containers:
        - name: digito-api
          image: jtalk/digito-api:[[IMAGE_TAG]]
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 400m
              memory: 400M
            requests:
              cpu: 100m
              memory: 100M
          startupProbe:
            periodSeconds: 5
            failureThreshold: 6
            httpGet:
              path: /health
              port: 80
          livenessProbe:
            failureThreshold: 1
            httpGet: 
              path: /health
              port: 80
