digito-api/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: digito-api
  labels:
    app: digito
    type: api
spec:
  selector:
    app: digito
    type: api
  ports:
    - name: http
      port: 80
      targetPort: 80
