digito-api/deploy/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: digito-api
  labels:
    app: digito
    type: api
  annotations:
    nginx.org/rewrites: "serviceName=digito-api rewrite=/;"

spec:
  rules:
    - host: digito2.jtalk.me
      http:
        paths:
        - path: /api
          backend:
            serviceName: digito-api
            servicePort: 80
    - host: digito.jtalk.me
      http:
        paths:
        - path: /api
          backend:
            serviceName: digito-api
            servicePort: 80
